# Enterprise-Knowledge-Copilot

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  (+1 more)
backend/: .dockerignore  .env.example  Dockerfile  README.md  _t.xlsx  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_users.py  0002_document_ingestion.py  0003_query_logs.py  0004_api_keys.py  0005_evals.py  0006_review.py  0007_webhooks.py  0008_chat_threads.py  0009_collections.py  0010_knowledge_lifecycle.py  0011_connectors.py  0012_agent_memories.py  0013_feedback.py
backend/app/: __init__.py  main.py
backend/app/api/: compat.py  deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  api_keys.py  auth.py  collections.py  connectors.py  context.py  documents.py  evals.py  health.py  knowledge.py  memory.py  profiles.py  query.py  reviews.py  search.py  sso.py  threads.py  users.py
backend/app/core/: config.py  crypto.py  exceptions.py  logging.py  metrics.py  middleware.py  ratelimit.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/mcp/: __init__.py  server.py
backend/app/models/: __init__.py  apikey.py  collection.py  connector.py  document.py  evals.py  memory.py  mixins.py  querylog.py  thread.py  user.py  webhook.py
backend/app/schemas/: api_key.py  auth.py  document.py  evals.py  query.py  review.py  search.py  thread.py  user.py  webhook.py
backend/app/services/: access.py  api_keys.py  conversation.py  documents.py  memory.py  sso.py  storage.py  users.py  vectorstore.py  vectorstore_qdrant.py  webhooks.py
backend/app/services/connectors/: __init__.py  confluence.py  gdrive.py  notion.py  oauth_state.py
backend/app/services/evals/: metrics.py  service.py
backend/app/services/generation/: confidence.py  extractive.py  factory.py  groundedness.py  llm_generator.py  ports.py  prompting.py  providers.py  sentences.py  service.py
backend/app/services/ingestion/: chunking.py  embedding.py  factory.py  ocr.py  office.py  parsers.py  pipeline.py  ports.py
backend/app/services/profiles/: loader.py  schema.py
backend/app/services/profiles/packs/: finance.yaml  general.yaml  government.yaml  healthcare.yaml  insurance.yaml  legal.yaml  manufacturing.yaml
backend/app/services/retrieval/: bm25.py  expand.py  factory.py  fusion.py  rerank.py  service.py  sparse.py  tokenize.py  types.py
backend/app/static/: index.html
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  pdf_fixtures.py  test_agent_context.py  test_api_keys.py  test_auth.py  test_bm25.py  test_chunking.py  test_collections.py  test_config.py  test_confluence_connector.py  test_connectors.py  test_conversation.py  test_documents.py  test_evals.py  test_gdrive_connector.py  test_generation.py  test_health.py  test_llm_providers.py  test_local_inference.py  test_mcp_server.py  test_memory.py  test_notion_connector.py  test_ocr.py  test_office_parsers.py  test_openai_compat.py  test_parent_child.py  test_parsers.py  test_profiles.py  test_query.py  test_ratelimit.py  test_reviews.py  test_search.py  test_sso.py  test_threads.py  test_users.py  test_vectorstore_contract.py  test_webhooks.py
bench/: README.md  questions.jsonl  run.py
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
infra/: Caddyfile  docker-compose.prod.yml  docker-compose.yml
(+26 files in other folders)
