[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-copilot"
version = "0.1.0"
description = "Production RAG & document intelligence backend for enterprise knowledge retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Enterprise Knowledge Copilot" }]

dependencies = [
    # Web framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-multipart>=0.0.12",
    # Settings & validation
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "email-validator>=2.2",
    # Resilience & HTTP
    "tenacity>=9.0",
    "httpx>=0.27",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    # Persistence
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    # Async task queue
    "celery[redis]>=5.4",
    # Auth & security
    "pyjwt>=2.9",
    "pwdlib[argon2]>=0.2",
    "cryptography>=43",
    # Config & profiles
    "pyyaml>=6.0",
    # Vector store (default production adapter)
    "qdrant-client>=1.12",
    # LLM provider SDKs (activated via LLM_PROVIDER config)
    "anthropic>=0.40",
    "openai>=1.60",
    # Document parsing
    "pypdf>=5.0",
]

[project.scripts]
ekc-mcp = "app.mcp.server:main"

[project.optional-dependencies]
# CPU-tier OCR for scanned PDFs/images (activated via OCR_PROVIDER=rapidocr).
mcp = ["mcp>=1.9"]
# Local neural embeddings + cross-encoder reranking on CPU (ONNX).
local = ["fastembed>=0.8"]
# DOCX / PPTX / XLSX ingestion.
office = ["python-docx>=1.1", "python-pptx>=1.0", "openpyxl>=3.1"]
ocr = [
    "rapidocr>=3.0",
    "onnxruntime>=1.20",
    "pypdfium2>=4.30",
]
dev = [
    "mcp>=1.9",
    "ruff>=0.7",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiosqlite>=0.20",
    "types-requests",
    "types-PyYAML",
    # OCR extras are exercised by the test suite
    "rapidocr>=3.0",
    "onnxruntime>=1.20",
    "pypdfium2>=4.30",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
# Ship profile packs (YAML) and the web console inside the wheel/container build.
"app" = ["**/*.yaml", "**/*.html"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ASYNC", # flake8-async
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101",  # assert used (fine in tests)
    "B008",  # function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "ARG"]

[tool.mypy]
python_version = "3.10"
plugins = ["pydantic.mypy"]
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
filterwarnings = ["error::DeprecationWarning"]
